- Cleaned up unused resources. - Bug fixes - Work to support error object from service - Better support to update entity model with user profile changes.